# xorfilter

./: .gitignore  0.out  Cargo.toml  Makefile  README.md  RELEASES.md  TODO.md  check.sh  perf.sh  rustfmt.toml
.github/: mergify.yml
.github/workflows/: ci.yml  general.yml  simple-build-test.yml
benches/: Cargo.toml  README.md  fuse16_bench.rs  fuse8_bench.rs  xor_bench.rs
benches/src/: fhash_ahash.rs  fhash_map.rs  filters.rs  hyperloglog.rs  lib.rs  stable_bench.rs  xor_bench.rs
src/: fuse16.rs  fuse16_test.rs  fuse8.rs  fuse8_test.rs  hasher.rs  lib.rs  xor8.rs  xor8_old.rs  xor8_test.rs
src/xor8/: builder.rs  filter.rs  mod.rs  tests.rs  xor8_test.rs
tests/: tl1-serialized.data  xorfilter.rs
